Fixed width in mobile view

--- a/index.html
+++ b/index.html
@@ -68,18 +68,17 @@
         <div class="card w-75 mx-auto">
             <div class="card-body">
                 <form  onsubmit="return calculate()" >
-                    <h5 class="card-title">Conventional time</h5>
-                    <div class="row align-items-center">
-                        <div class="col-4">
+                    <h5 class="card-title text-center">Conventional time</h5>
+                    <div class="row align-items-center my-3">
+                        <div class="">
                             <input type="text" class="form-control" id="t1" name="userName"
                                 placeholder="Enter the values">
                         </div>
-                        <div class="col-4">
-                            <button type="submit" class="form-control submit btn btn-success" value="submit" >Calculate</button>
-                        </div>
-
-                        
                     </div>
+                    <!-- <div class="col-4 my-2"> -->
+                    <div class="justify-content-center my-3">
+                        <button type="submit" class="form-control submit btn btn-success" value="submit" >Calculate</button>
+                    </div>                        
                 </form>
             </div>
         </div>
